addin navigation,securityconfig,login and others.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,5 +22,7 @@
         Password: <input type="password" name="password" /><br>
         <input type="submit" value="Log In" name="login-submit" /> 
     </form>
+    <p><a href="/" th:href="@{/}">Back to home page</a></p>
+
 </body>
 </html>
